# openthread

./: .gitignore  .travis.yaml  .travis.yml  Android.mk  CMakeLists.txt  Makefile  Makefile.am  NOTICE  README.md  bootstrap  bootstrap-configure  configure.ac  openthread.mak  prog.sh  xiaofang_trim_4s.hex
src/: CMakeLists.txt  Makefile.am  thread.mak
src/app/: ncp_app.cpp  soc_app.cpp
src/cli/: Makefile.am  README.md  cli.cpp  cli.h  cli.hpp  cli_command.cc  cli_command.cpp  cli_command.h  cli_command.hpp  cli_config.h  cli_ifconfig.cc  cli_ifconfig.cpp  cli_ifconfig.h  cli_ifconfig.hpp  cli_ip.cc  cli_ip.cpp  cli_ip.h  cli_ip.hpp  cli_mac.cc  cli_mac.cpp  cli_mac.h  cli_mac.hpp  cli_netdata.cc  cli_netdata.cpp  cli_netdata.h  cli_netdata.hpp  cli_perf.cpp  cli_perf.hpp  cli_phy.cc  cli_phy.h  cli_ping.cc  cli_ping.cpp  cli_ping.h  cli_ping.hpp  cli_route.cc  cli_route.cpp  cli_route.h  cli_route.hpp  cli_serial.cc  cli_serial.cpp  (+26 more)
src/cli/.deps/: cli_command.Po  cli_ifconfig.Po  cli_ip.Po  cli_mac.Po  cli_netdata.Po  cli_ping.Po  cli_route.Po  cli_shutdown.Po  cli_thread.Po  cli_udp.Po
src/coap/: coap_header.cc  coap_header.cpp  coap_message.cc  coap_server.cc
src/coap/.deps/: coap_message.Po  coap_server.Po
src/common/: code_utils.h  debug.h  message.cc  random.cc  random.h  tasklet.cc  timer.cc  timer.cpp
src/common/.deps/: message.Po  random.Po  tasklet.Po  timer.Po
src/core/: Makefile.am  openthread-core-config.h  openthread-core-default-config.h  openthread.cpp
src/core/api/: udp_api.cpp
src/core/coap/: coap.cpp  coap_header.cpp  coap_server.cpp  coap_server.hpp
src/core/common/: code_utils.hpp  debug.h  debug.hpp  instance.cpp  logging.cpp  logging.hpp  message.cpp  message.hpp  random.cpp  settings.cpp  settings.hpp  tasklet.cpp  tasklet.hpp  timer.cpp  timer.hpp
src/core/crypto/: aes_ccm.cpp  aes_ccm.h  aes_ccm.hpp  aes_ecb.cpp  aes_ecb.hpp  hash.hpp  hmac.cpp  hmac.hpp  sha256.cpp  sha256.hpp
src/core/mac/: mac.cpp  mac.hpp  mac_frame.cpp  mac_frame.hpp  mac_whitelist.cpp  mac_whitelist.hpp  sub_mac.cpp
src/core/meshcop/: panid_query_client.hpp
src/core/net/: dns_headers.cpp  icmp6.cpp  icmp6.hpp  ip6.cpp  ip6.hpp  ip6_address.cpp  ip6_address.hpp  ip6_headers.hpp  ip6_mpl.cpp  ip6_mpl.hpp  ip6_routes.cpp  ip6_routes.h  ip6_routes.hpp  netif.cpp  netif.hpp  socket.hpp  udp6.cpp  udp6.hpp
src/core/thread/: address_resolver.cpp  address_resolver.hpp  key_manager.cpp  key_manager.hpp  lowpan.cpp  lowpan.hpp  mesh_forwarder.cpp  mesh_forwarder.hpp  mesh_forwarder_ftd.cpp  mesh_forwarder_mtd.cpp  mle.cpp  mle.hpp  mle_constants.hpp  mle_router.cpp  mle_router.hpp  mle_tlvs.cpp  mle_tlvs.hpp  network_data.cpp  network_data.hpp  network_data_leader.cpp  network_data_leader.hpp  network_data_local.cpp  network_data_local.hpp  network_data_tlvs.hpp  thread_netif.cpp  thread_netif.hpp  thread_tlvs.cpp  thread_tlvs.hpp  thread_uris.hpp  topology.hpp
src/crypto/: aes_ccm.cc  aes_ccm.cpp  aes_ccm.h  aes_ecb.cc  aes_ecb.cpp  hash.h  hmac.cc  hmac.h  sha256.cc  sha256.h
src/crypto/.deps/: aes_ccm.Po  aes_ecb.Po  hmac.Po  sha256.Po
src/mac/: mac.cc  mac.cpp  mac_frame.cc  mac_whitelist.cc  mac_whitelist.cpp
src/mac/.deps/: mac.Po  mac_frame.Po  mac_whitelist.Po
src/meshcop/: joiner_router.cc  joiner_router.h  meshcop_tlvs.h
src/ncp/: Makefile.am  hdlc.cc  hdlc.cpp  hdlc.cpp.orig  hdlc.h  hdlc.hpp  ncp.cc  ncp.cpp  ncp.h  ncp.hpp  ncp.pb-c.c  ncp.pb-c.h  ncp.proto  ncp_base.cc  ncp_base.cpp  ncp_base.h  ncp_base.hpp  ncp_base_dispatcher.cpp  protobuf-c.h  static-c.pb-c.h
src/ncp/.deps/: hdlc.Po  ncp.Po  ncp.pb-c.Po
src/net/: dhcp6.h  dhcp6_client.cc  dhcp6_client.h  dhcp6_server.cc  dhcp6_server.h  icmp6.cc  icmp6.cpp  ip6.cc  ip6_address.cc  ip6_mpl.cc  ip6_mpl.h  ip6_routes.cc  ip6_routes.h  netif.cc  udp6.cc
src/net/.deps/: icmp6.Po  ip6.Po  ip6_address.Po  ip6_mpl.Po  ip6_routes.Po  netif.Po  udp6.Po
src/platform/common/: atomic.h  atomic_interface.h  phy.h  phy_interface.h  sleep.h  uart.h  uart_interface.h
src/platform/commsim/: alarm.cc  atomic.cc  cmdline.h  phy.cc  sleep.cc  thread_posix.mak  uart.cc
src/platform/cortex-m/: alarm.cc  atomic.cc  sleep.cc
src/platform/da15100/: alarm.cc  atomic.cc  atomic.h  phy.cc  phy.h  sleep.cc  sleep.h  thread_da15100.mak  uart.cc  uart.h
src/platform/em35x/: alarm.cc  alarm.h  atomic.cc  atomic.h  phy.cc  phy.h  sleep.cc  sleep.h  thread_em35x.mak  uart.cc  uart.h
src/platform/kw2x/: alarm.cc  alarm.h  atomic.cc  atomic.h  phy.cc  phy.h  sleep.cc  sleep.h  thread_kw2x.mak  uart.cc  uart.h
src/platform/kw4x/: alarm.cc  alarm.h  atomic.cc  atomic.h  phy.cc  phy.h  sleep.cc  sleep.h  thread_kw4x.mak  uart.cc  uart.h
src/platform/posix/: alarm.cc  atomic.h  cli_posix.cc  cli_posix.h  cmdline.h  phy.cc  sleep.h  uart.cc  uart.h
src/posix/: Makefile-posix  cli.cmake  main.c
src/posix/platform/: CMakeLists.txt  Makefile.am  backtrace.cpp  hdlc_interface.cpp  hdlc_interface.hpp  misc.c  openthread-core-posix-config.h  openthread-posix-config.h  openthread-system.h  platform-posix.h  radio.cpp  radio_spinel.cpp  radio_spinel.hpp  settings.cpp  spi_interface.cpp  spi_interface.hpp  spinel_interface.hpp  stream.cpp  stream_uart.cpp  stream_uart.hpp  system.c  system.cpp
src/protobuf/: protobuf-c.h
src/rpc/: CMakeLists.txt  rcp_client.cpp  rcp_client.hpp  rcp_server.cpp  rcp_server.hpp  rpc_decoder.cpp  rpc_decoder.hpp
src/rpc/protos/: rcp.options  (+1 more)
src/thread/: address_resolver.cc  key_manager.cc  lowpan.cc  lowpan.cpp  mesh_forwarder.cc  mle.cc  mle_router.cc  mle_tlvs.cc  network_data.cc  network_data_leader.cc  network_data_local.cc  thread_netif.cc  thread_netif.cpp  thread_tlvs.cc  thread_tlvs.h
src/tun/: tun_netif.cc  tun_netif.h
test/: .gitignore  Makefile.am  README.md  config.h.in  configure.ac
test/src/: Makefile.am
tests/: Makefile.am
tests/ncp/: Makefile.am
tests/scripts/: Makefile.am
tests/soc/: Makefile.am
tests/unit/: Makefile.am  test_aes.cpp  test_hmac_sha256.cpp  test_mac_frame.cpp  test_message.cpp  test_platform.cpp  test_sha256.cpp  test_util.h
(+376 files in other folders)
