
noinst_LIBRARIES = libthread.a
libthread_a_SOURCES = \
    cli/cli_command.cpp \
    cli/cli_ifconfig.cpp \
    cli/cli_ip.cpp \
    cli/cli_mac.cpp \
    cli/cli_netdata.cpp \
    cli/cli_ping.cpp \
    cli/cli_route.cpp \
    cli/cli_server.cpp \
    cli/cli_shutdown.cpp \
    cli/cli_thread.cpp \
    cli/cli_udp.cpp \
    coap/coap_header.cpp \
    coap/coap_server.cpp \
    common/message.cpp \
    common/random.cpp \
    common/tasklet.cpp \
    common/timer.cpp \
    crypto/aes_ccm.cpp \
    crypto/aes_ecb.cpp \
    crypto/hmac.cpp \
    crypto/sha256.cpp \
    mac/mac.cpp \
    mac/mac_frame.cpp \
    mac/mac_whitelist.cpp \
    ncp/hdlc.cpp \
    ncp/ncp_base.cpp \
    ncp/ncp.cpp \
    ncp/ncp.pb-c.c \
    net/icmp6.cpp \
    net/ip6.cpp \
    net/ip6_address.cpp \
    net/ip6_mpl.cpp \
    net/ip6_routes.cpp \
    net/netif.cpp \
    net/udp6.cpp \
    platform/posix/alarm.cpp \
    platform/posix/atomic.cpp \
    platform/posix/cli_posix.cpp \
    platform/posix/cmdline.c \
    platform/posix/phy.cpp \
    platform/posix/sleep.cpp \
    platform/posix/uart.cpp \
    protobuf/protobuf-c.c \
    thread/address_resolver.cpp \
    thread/key_manager.cpp \
    thread/lowpan.cpp \
    thread/mesh_forwarder.cpp \
    thread/mle.cpp \
    thread/mle_router.cpp \
    thread/mle_tlvs.cpp \
    thread/network_data.cpp \
    thread/network_data_local.cpp \
    thread/network_data_leader.cpp \
    thread/thread_netif.cpp \
    thread/thread_tlvs.cpp \
    $(NULL)

CXXFLAGS += -DAUTOMAKE

CPPFLAGS += -I ../include
